refactor: services throw NotFoundException instead of returning null