@@ -9,12 +9,10 @@ import com.openclassrooms.starterjwt.repository.UserRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class SessionService {
     private final SessionRepository sessionRepository;
-
     private final UserRepository userRepository;
 
     public SessionService(SessionRepository sessionRepository, UserRepository userRepository) {
@@ -23,56 +21,49 @@ public class SessionService {
     }
 
     public Session create(Session session) {
-        return this.sessionRepository.save(session);
+        return sessionRepository.save(session);
     }
 
     public void delete(Long id) {
-        this.sessionRepository.deleteById(id);
+        sessionRepository.findById(id).orElseThrow(NotFoundException::new);
+        sessionRepository.deleteById(id);
     }
 
     public List<Session> findAll() {
-        return this.sessionRepository.findAll();
+        return sessionRepository.findAll();
     }
 
     public Session getById(Long id) {
-        return this.sessionRepository.findById(id).orElse(null);
+        return sessionRepository.findById(id).orElseThrow(NotFoundException::new);
     }
 
     public Session update(Long id, Session session) {
         session.setId(id);
-        return this.sessionRepository.save(session);
+        return sessionRepository.save(session);
     }
 
     public void participate(Long id, Long userId) {
-        Session session = this.sessionRepository.findById(id).orElse(null);
-        User user = this.userRepository.findById(userId).orElse(null);
-        if (session == null || user == null) {
-            throw new NotFoundException();
-        }
+        Session session = sessionRepository.findById(id).orElseThrow(NotFoundException::new);
+        User user = userRepository.findById(userId).orElseThrow(NotFoundException::new);
 
-        boolean alreadyParticipate = session.getUsers().stream().anyMatch(o -> o.getId().equals(userId));
-        if (alreadyParticipate) {
+        if (session.getUsers().stream().anyMatch(u -> u.getId().equals(userId))) {
             throw new BadRequestException();
         }
 
         session.getUsers().add(user);
-
-        this.sessionRepository.save(session);
+        sessionRepository.save(session);
     }
 
     public void noLongerParticipate(Long id, Long userId) {
-        Session session = this.sessionRepository.findById(id).orElse(null);
-        if (session == null) {
-            throw new NotFoundException();
-        }
+        Session session = sessionRepository.findById(id).orElseThrow(NotFoundException::new);
 
-        boolean alreadyParticipate = session.getUsers().stream().anyMatch(o -> o.getId().equals(userId));
-        if (!alreadyParticipate) {
+        if (session.getUsers().stream().noneMatch(u -> u.getId().equals(userId))) {
             throw new BadRequestException();
         }
 
-        session.setUsers(session.getUsers().stream().filter(user -> !user.getId().equals(userId)).collect(Collectors.toList()));
-
-        this.sessionRepository.save(session);
+        session.setUsers(session.getUsers().stream()
+                .filter(u -> !u.getId().equals(userId))
+                .toList());
+        sessionRepository.save(session);
     }
 }
